src/index.css
body {
  box-sizing: border-box;
  margin: 0;
  display: flex;
  flex-direction: column;
  background-color: #FFF;
  height: 100vh;
  font-family: 'Helvetica', 'Arial', sans-serif;
  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale; */
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

h1 {
  color: #102261;
}

p {
  font-family: 'Helvetica', 'Arial', sans-serif;
  color: #333333;
  /* line-height: 1.5px; */
}


.app-header {
  border-top: solid #0ADDD7 3.43px;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
}

.logo-wrapper {
  padding-left: 32px;
  padding-right: 32px;
  margin-left: 5px;
  margin-top: 5px;
}

.main-content-wrapper {
  margin: 05px 10px;
}

.main-content {
  margin: 0 auto;
  display: flex;
  flex-direction: column;
}

.main-content > div {
  display: flex;
  flex-direction: column;
}

.form-wrapper {
  display: flex;
  flex-grow: 1;
  width: 100%;
  margin: .5rem 0;
}

.form-wrapper > form {
  width: 100%;
}

input {
  width: 100%;
  height: 20px;
  background-color: #EFEFEF;
  border: none;
  border-radius: 2px;
  padding: .5rem;
}

.list-wrapper {
  display: flex;
  flex-direction: column;
  width: 100%;
  margin: 1rem 0;
}

.person-card {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  margin: 1rem auto;
  text-align: center;
}

.person-avatar {
  display: flex;
  flex-grow: 1;
}

.person-avatar img {
  max-width: 100%;
  max-height: 100%;
  background-color: #C4C4C4;
  border-radius: 2px;
}

.person-info {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  flex-grow: 2;
  text-align: left;
  margin-top: 1rem;
  padding-left: 1rem;
}

.person-info h3 {
  color: #333333;
  margin: 0;
}

.person-info p {
  color: #666666;
}

/* Smartphones (portrait and landscape) */

@media all and (min-width: 481px) {
  .main-content-wrapper {
    margin: 05px auto;
  }

  .main-content {
    max-width: 400px;
    margin: 1rem auto;
  }
}

/* Tablets  */
@media all and (min-width: 769px) {
  .main-content {
    max-width: 575px;
  }

  .main-content > div {
    text-align: left;
  }

  /* Individual Person Card Styles */
  .person-card {
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    justify-content: space-between;
    width: 100%;
    margin: 1rem 0;
  }

  .person-avatar {
    display: flex;
    flex-grow: 1;
  }

  .person-avatar img {
    max-width: 100%;
    max-height: 100%;
    background-color: #C4C4C4;
  }

  .person-info {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    flex-grow: 2;
    text-align: left;
    margin-top: 0;
    padding-left: 1rem;
  }
}

/* Small screens */
@media all and (min-width: 1025px) {
  .main-content {
    max-width: 575px;
  }
}

